<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/calBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculation"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexRdoGup" />

    <EditText
        android:id="@+id/heightEdtTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/login_div_bg"
        android:ems="10"
        android:hint="@string/height"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:paddingLeft="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/faceIv"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/sexRdoGup"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/sexRdoGup"
        app:layout_constraintVertical_bias="0.201" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/weightEdtTxt"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/weightEdtTxt"
        app:layout_constraintVertical_bias="0.454" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/height"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/heightEdtTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/heightEdtTxt" />

    <EditText
        android:id="@+id/weightEdtTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_div_bg"
        android:ems="10"
        android:hint="@string/weight"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:paddingLeft="16dp"
        app:layout_constraintBottom_toTopOf="@+id/sexRdoGup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/heightEdtTxt"
        app:layout_constraintVertical_bias="0.488" />

    <ImageView
        android:id="@+id/faceIv"
        android:layout_width="72dp"
        android:layout_height="72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054"
        app:srcCompat="@drawable/login_man" />

    <RadioGroup
        android:id="@+id/sexRdoGup"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:checkedButton="@id/maleRdoBtn"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/weightEdtTxt"
        app:layout_constraintStart_toStartOf="@+id/weightEdtTxt"
        app:layout_constraintTop_toBottomOf="@+id/faceIv">

        <RadioButton
            android:id="@+id/maleRdoBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/male"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/femaleRdoBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/female"
            android:textSize="24sp" />


    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>